--- a/locales/en.json
+++ b/locales/en.json
@@ -595,64 +595,30 @@
     "Study of user-centered design and UI design (UXD). ",
     "Trained in design, user testing, programming and psychology. (1,3)"
   ],
-  "text_about_education-1_location": [
-    "Ingolstadt"
-  ],
-  "text_about_education-1_organization": [
-    "University of Applied Sciences Ingolstadt (THI)"
-  ],
-  "text_about_education-1_time-span": [
-    "Oct 2016 &ndash; Mar 2020"
-  ],
-  "text_about_education-1_title": [
-    "UX Design B.Sc."
-  ],
+  "text_about_education-1_location": "Ingolstadt",
+  "text_about_education-1_organization": "University of Applied Sciences Ingolstadt (THI)",
+  "text_about_education-1_time-span": "Oct 2016 &ndash; Mar 2020",
+  "text_about_education-1_title": "UX Design B.Sc.",
   "text_about_education-2_description": [
     "UI concept for a simulation game, following the user-centered design process. ",
     "Research, wireframes, sketches, UI design, prototyping, programming, user testing, Unity, Phaser. (1,3)"
   ],
-  "text_about_education-2_location": [
-    "Ingolstadt"
-  ],
-  "text_about_education-2_organization": [
-    "Bachelor Thesis"
-  ],
-  "text_about_education-2_time-span": [
-    "Oct 2019 &ndash; Mar 2020"
-  ],
-  "text_about_education-2_title": [
-    "Video Game UI"
-  ],
+  "text_about_education-2_location": "Ingolstadt",
+  "text_about_education-2_organization": "Bachelor Thesis",
+  "text_about_education-2_time-span": "Oct 2019 &ndash; Mar 2020",
+  "text_about_education-2_title": "Video Game UI",
   "text_about_education-3_description": [
     "Support in terms of workshops, like courses in public speaking, seminars about sociopolitical issues, contact to fellow scholars."
   ],
-  "text_about_education-3_location": [
-    "Munich"
-  ],
-  "text_about_education-3_organization": [
-    "Hanns-Seidel-Stiftung"
-  ],
-  "text_about_education-3_time-span": [
-    "Apr 2018 &ndash; Mar 2020"
-  ],
-  "text_about_education-3_title": [
-    "Former Scholarship"
-  ],
-  "text_about_education-4_description": [
-    "<<EMPTY>>"
-  ],
-  "text_about_education-4_location": [
-    "Ingolstadt"
-  ],
-  "text_about_education-4_organization": [
-    "DesignNow Autodesk Fusion 360"
-  ],
-  "text_about_education-4_time-span": [
-    "Apr 2018"
-  ],
-  "text_about_education-4_title": [
-    "1st place, design competition"
-  ],
+  "text_about_education-3_location": "Munich",
+  "text_about_education-3_organization": "Hanns-Seidel-Stiftung",
+  "text_about_education-3_time-span": "Apr 2018 &ndash; Mar 2020",
+  "text_about_education-3_title": "Former Scholarship",
+  "text_about_education-4_description": [],
+  "text_about_education-4_location": "Ingolstadt",
+  "text_about_education-4_organization": "DesignNow Autodesk Fusion 360",
+  "text_about_education-4_time-span": "Apr 2018",
+  "text_about_education-4_title": "1st place, design competition",
   "text_about_hello": [
     "Hello! "
   ],
@@ -664,36 +630,20 @@
     "Prototyping in HTML & CSS. Design of advert banners. ",
     "Java Bootcamp with Spring. Wireframes for website. "
   ],
-  "text_about_work-experience-1_location": [
-    "Munich"
-  ],
-  "text_about_work-experience-1_organization": [
-    "eForce21 GmbH"
-  ],
-  "text_about_work-experience-1_time-span": [
-    "Aug 2018 &ndash; Dec 2018"
-  ],
-  "text_about_work-experience-1_title": [
-    "Internship Semester"
-  ],
+  "text_about_work-experience-1_location": "Munich",
+  "text_about_work-experience-1_organization": "eForce21 GmbH",
+  "text_about_work-experience-1_time-span": "Aug 2018 &ndash; Dec 2018",
+  "text_about_work-experience-1_title": "Internship Semester",
   "text_about_work-experience-2_description": [
     "Working on digital school books. ",
     "Creating concepts to aid teachers correct homework. ",
     "Cutting of an audio book. ",
     "Research for writing. "
   ],
-  "text_about_work-experience-2_location": [
-    "Eichstätt"
-  ],
-  "text_about_work-experience-2_organization": [
-    "Cornelsen mBook Verlag"
-  ],
-  "text_about_work-experience-2_time-span": [
-    "Jul 2017 &ndash; Sept 2017"
-  ],
-  "text_about_work-experience-2_title": [
-    "Internship"
-  ],
+  "text_about_work-experience-2_location": "Eichstätt",
+  "text_about_work-experience-2_organization": "Cornelsen mBook Verlag",
+  "text_about_work-experience-2_time-span": "Jul 2017 &ndash; Sept 2017",
+  "text_about_work-experience-2_title": "Internship",
   "text_contact": [
     "<em>Lukas Semmler</em><br>",
     "User Experience Designer<br>",
