--- a/locales/en.json
+++ b/locales/en.json
@@ -626,24 +626,34 @@
     "Munich, Germany"
   ],
   "text_about_work-experience-1_description": [
-    "Developing the new company website with Magnolia and FreeMarker. ",
-    "Prototyping in HTML & CSS. Design of advert banners. ",
-    "Java Bootcamp with Spring. Wireframes for website. "
-  ],
-  "text_about_work-experience-1_location": "Munich",
-  "text_about_work-experience-1_organization": "eForce21 GmbH",
-  "text_about_work-experience-1_time-span": "Aug 2018 &ndash; Dec 2018",
-  "text_about_work-experience-1_title": "Internship Semester",
-  "text_about_work-experience-2_description": [
     "Working on digital school books. ",
     "Creating concepts to aid teachers correct homework. ",
     "Cutting of an audio book. ",
     "Research for writing. "
   ],
-  "text_about_work-experience-2_location": "Eichstätt",
-  "text_about_work-experience-2_organization": "Cornelsen mBook Verlag",
-  "text_about_work-experience-2_time-span": "Jul 2017 &ndash; Sept 2017",
-  "text_about_work-experience-2_title": "Internship",
+  "text_about_work-experience-1_location": "Eichstätt",
+  "text_about_work-experience-1_organization": "Cornelsen mBook Verlag",
+  "text_about_work-experience-1_time-span": "Jul 2017 &ndash; Sept 2017",
+  "text_about_work-experience-1_title": "Internship",
+  "text_about_work-experience-2_description": [
+    "Developing the new company website with Magnolia and FreeMarker. ",
+    "Prototyping in HTML & CSS. Design of advert banners. ",
+    "Java Bootcamp with Spring. Wireframes for website. "
+  ],
+  "text_about_work-experience-2_location": "Munich",
+  "text_about_work-experience-2_organization": "eForce21 GmbH",
+  "text_about_work-experience-2_time-span": "Aug 2018 &ndash; Dec 2018",
+  "text_about_work-experience-2_title": "Internship Semester",
+  "text_about_work-experience-3_description": [
+    "UI design for word processor used by German judiciary. ",
+    "Creating design and control specs for UI controls. ",
+    "Extensive work with Sketch and automation with custom scripts. ",
+    "Collaboration with accessability experts. "
+  ],
+  "text_about_work-experience-3_location": "Oberhaching",
+  "text_about_work-experience-3_organization": "dvhaus Software &amp; Solutions GmbH",
+  "text_about_work-experience-3_time-span": "Jan 2021 &ndash; today",
+  "text_about_work-experience-3_title": "UX Designer",
   "text_contact": [
     "<em>Lukas Semmler</em><br>",
     "User Experience Designer<br>",
