Fix ids of PaginationCard

--- a/locales/de.json
+++ b/locales/de.json
@@ -397,9 +397,9 @@
   "label_product_visual-studio-code": "VS Code",
   "label_product_vue-js": "VueJS",
   "label_product_webstorm": "Webstorm",
-  "label_project-nav_current": "Aktuelles Projekt",
-  "label_project-nav_next": "Nächstes Projekt",
-  "label_project-nav_previous": "Vorheriges Projekt",
+  "label_project-pagination_current": "Aktuelles Projekt",
+  "label_project-pagination_next": "Nächstes Projekt",
+  "label_project-pagination_previous": "Vorheriges Projekt",
   "label_project-summary_date": "Datum",
   "label_project-summary_format": "Format",
   "label_project-summary_lecture": "Vorlesung",
