--- a/locales/en.json
+++ b/locales/en.json
@@ -397,9 +397,9 @@
   "label_product_visual-studio-code": "VS Code",
   "label_product_vue-js": "VueJS",
   "label_product_webstorm": "Webstorm",
-  "label_project-nav_current": "Current project",
-  "label_project-nav_next": "Next project",
-  "label_project-nav_previous": "Previous project",
+  "label_project-pagination_current": "Current project",
+  "label_project-pagination_next": "Next project",
+  "label_project-pagination_previous": "Previous project",
   "label_project-summary_date": "Date",
   "label_project-summary_format": "Format",
   "label_project-summary_lecture": "Lecture",
