Add content to page 'privacy-policy'

--- a/locales/en.json
+++ b/locales/en.json
@@ -1012,42 +1012,32 @@
     "To be able to compare said tests, a UEQ and SUS questionnaire was used at last."
   ],
   "text_privacy-policy_data-protection": [
-    "<p>",
-    "  The operators of this website take the protection of your personal data very seriously. ",
-    "  We treat your personal data as confidential and in accordance with the statutory data protection regulations and this privacy policy. ",
-    "</p>",
-    "<p>",
-    "  If you use this website, various pieces of personal data will be collected. ",
-    "  Personal information is any data with which you could be personally identified. ",
-    "  This privacy policy explains what information we collect and what we use it for. ",
-    "  It also explains how and for what purpose this happens.",
-    "</p>",
-    "<p>",
-    "  Please note that data transmitted via the internet (e.g. via email communication) may be subject to security breaches. ",
-    "  Complete protection of your data from third-party access is not possible.",
-    "</p>"
+    "The operators of this website take the protection of your personal data very seriously. ",
+    "We treat your personal data as confidential and in accordance with the statutory data protection regulations and this privacy policy. ",
+    "\n\n",
+    "If you use this website, various pieces of personal data will be collected. ",
+    "Personal information is any data with which you could be personally identified. ",
+    "This privacy policy explains what information we collect and what we use it for. ",
+    "It also explains how and for what purpose this happens.",
+    "\n\n",
+    "Please note that data transmitted via the internet (e.g. via email communication) may be subject to security breaches. ",
+    "Complete protection of your data from third-party access is not possible."
   ],
   "text_privacy-policy_log-files": [
-    "<p>",
-    "  The website provider automatically collects and stores information that your browser automatically transmits to us in \"server log files\". ",
-    "  These are: ",
-    "</p> ",
-    "<ul>",
-    "  <li>Browser type and browser version </li>",
-    "  <li>Operating system used </li>",
-    "  <li>Referrer URL </li>",
-    "  <li>Host name of the accessing computer </li>",
-    "  <li>Time of the server request </li>",
-    "</ul>",
-    "<p>",
-    "  These data will not be combined with data from other sources. ",
-    "  The basis for data processing is Art. 6 (1) (f) DSGVO, which allows the processing of data to fulfill a contract or ",
-    "  for measures preliminary to a contract.",
-    "</p> "
+    "The website provider automatically collects and stores information that your browser automatically transmits to us in \"server log files\". ",
+    "These are: ",
+    "\n",
+    "* Browser type and browser version\n",
+    "* Operating system used\n",
+    "* Referrer URL\n",
+    "* Host name of the accessing computer\n",
+    "* Time of the server request\n",
+    "\n\n",
+    "These data will not be combined with data from other sources. ",
+    "The basis for data processing is Art. 6 (1) (f) DSGVO, which allows the processing of data to fulfill a contract or ",
+    "for measures preliminary to a contract."
   ],
-  "text_privacy-policy_source": [
-    "Source: <a href=\"https://www.e-recht24.de\">eRecht24</a>"
-  ],
+  "text_privacy-policy_source": "Source: [eRecht24](https://www.e-recht24.de)",
   "text_steering-wheel_credits": [
     "This project was realized together with <a href=\"https://maximiliangoetz.de/\">Maximilian Götz</a> and ",
     "<a href=\"http://alexanderbeidoun.de/\">Alexander Beidoun</a>. ",
