--- a/locales/de.json
+++ b/locales/de.json
@@ -1012,42 +1012,32 @@
     "Um diese Tests vergleichen zu können, kam anschließend ein UEQ- und ein SUS-Fragebogen zum Einsatz."
   ],
   "text_privacy-policy_data-protection": [
-    "<p>",
-    "  Die Betreiber dieser Seiten nehmen den Schutz Ihrer persönlichen Daten sehr ernst. Wir behandeln Ihre ",
-    "  personenbezogenen Daten vertraulich und entsprechend der gesetzlichen Datenschutzvorschriften sowie dieser Datenschutzerklärung.",
-    "</p> ",
-    "<p>",
-    "  Die Nutzung unserer Website ist in der Regel ohne Angabe personenbezogener Daten möglich. Soweit auf unseren ",
-    "  Seiten personenbezogene Daten (beispielsweise Name, Anschrift oder E-Mail-Adressen) erhoben werden, erfolgt ",
-    "  dies, soweit möglich, stets auf freiwilliger Basis. Diese Daten werden ohne Ihre ausdrückliche Zustimmung nicht ",
-    "  an Dritte weitergegeben.",
-    "</p> ",
-    "<p>",
-    "  Wir weisen darauf hin, dass die Datenübertragung im Internet (z.B. bei der Kommunikation per E-Mail) ",
-    "  Sicherheitslücken aufweisen kann. Ein lückenloser Schutz der Daten vor dem Zugriff durch Dritte ist nicht möglich.",
-    "</p>"
+    "Die Betreiber dieser Seiten nehmen den Schutz Ihrer persönlichen Daten sehr ernst. Wir behandeln Ihre ",
+    "personenbezogenen Daten vertraulich und entsprechend der gesetzlichen Datenschutzvorschriften sowie dieser Datenschutzerklärung.",
+    "\n\n",
+    "Die Nutzung unserer Website ist in der Regel ohne Angabe personenbezogener Daten möglich. Soweit auf unseren ",
+    "Seiten personenbezogene Daten (beispielsweise Name, Anschrift oder E-Mail-Adressen) erhoben werden, erfolgt ",
+    "dies, soweit möglich, stets auf freiwilliger Basis. Diese Daten werden ohne Ihre ausdrückliche Zustimmung nicht ",
+    "an Dritte weitergegeben.",
+    "\n\n",
+    "Wir weisen darauf hin, dass die Datenübertragung im Internet (z.B. bei der Kommunikation per E-Mail) ",
+    "Sicherheitslücken aufweisen kann. Ein lückenloser Schutz der Daten vor dem Zugriff durch Dritte ist nicht möglich."
   ],
   "text_privacy-policy_log-files": [
-    "<p>",
-    "  Der Provider der Seiten erhebt und speichert automatisch Informationen in so genannten Server-Log Files, die ",
-    "  Ihr Browser automatisch an uns übermittelt. Dies sind:",
-    "</p> ",
-    "<ul> ",
-    "  <li>Browsertyp und Browserversion</li> ",
-    "  <li>verwendetes Betriebssystem</li> ",
-    "  <li>Referrer URL</li> ",
-    "  <li>Hostname des zugreifenden Rechners</li> ",
-    "  <li>Uhrzeit der Serveranfrage</li> ",
-    "</ul> ",
-    "<p>",
-    "  Diese Daten sind nicht bestimmten Personen zuordenbar. Eine Zusammenführung dieser Daten mit anderen Datenquellen ",
-    "  wird nicht vorgenommen. Wir behalten uns vor, diese Daten nachträglich zu prüfen, wenn uns konkrete Anhaltspunkte ",
-    "  für eine rechtswidrige Nutzung bekannt werden.",
-    "</p>"
+    "Der Provider der Seiten erhebt und speichert automatisch Informationen in so genannten Server-Log Files, die ",
+    "Ihr Browser automatisch an uns übermittelt. Dies sind:",
+    "\n\n",
+    "* Browsertyp und Browserversion\n",
+    "* verwendetes Betriebssystem\n",
+    "* Referrer URL\n",
+    "* Hostname des zugreifenden Rechners\n",
+    "* Uhrzeit der Serveranfrage\n",
+    "\n\n",
+    "Diese Daten sind nicht bestimmten Personen zuordenbar. Eine Zusammenführung dieser Daten mit anderen Datenquellen ",
+    "wird nicht vorgenommen. Wir behalten uns vor, diese Daten nachträglich zu prüfen, wenn uns konkrete Anhaltspunkte ",
+    "für eine rechtswidrige Nutzung bekannt werden."
   ],
-  "text_privacy-policy_source": [
-    "Quelle: <a href=\"https://www.e-recht24.de\">eRecht24</a>"
-  ],
+  "text_privacy-policy_source": "Quelle: [eRecht24](https://www.e-recht24.de)",
   "text_steering-wheel_credits": [
     "Das Projekt ist in Zusammenarbeit mit <a href=\"https://maximiliangoetz.de/\">Maximilian Götz</a> und ",
     "<a href=\"http://alexanderbeidoun.de/\">Alexander Beidoun</a> entstanden. Es hat sogar den ",
