--- a/locales/de.json
+++ b/locales/de.json
@@ -697,61 +697,46 @@
     "Es beschäftigt sich mit Themen wie Komposition, Gestaltungsgesetze und Typografie. "
   ],
   "text_imprint_accountability-for-content": [
-    "<p>",
-    "  Als Diensteanbieter sind wir gemäß § 7 Abs.1 TMG für eigene Inhalte auf diesen Seiten nach den allgemeinen ",
-    "  Gesetzen verantwortlich. Nach §§ 8 bis 10 TMG sind wir als Diensteanbieter jedoch nicht verpflichtet, ",
-    "  übermittelte oder gespeicherte fremde Informationen zu überwachen oder nach Umständen zu forschen, die auf eine ",
-    "  rechtswidrige Tätigkeit hinweisen.",
-    "</p> ",
-    "<p>",
-    "  Verpflichtungen zur Entfernung oder Sperrung der Nutzung von Informationen nach den allgemeinen Gesetzen bleiben hiervon unberührt. ",
-    "  Eine diesbezügliche Haftung ist jedoch erst ab dem Zeitpunkt der Kenntnis einer konkreten Rechtsverletzung möglich. ",
-    "  Bei Bekanntwerden von entsprechenden Rechtsverletzungen werden wir diese Inhalte umgehend entfernen.",
-    "</p> "
+    "Als Diensteanbieter sind wir gemäß § 7 Abs.1 TMG für eigene Inhalte auf diesen Seiten nach den allgemeinen ",
+    "Gesetzen verantwortlich. Nach §§ 8 bis 10 TMG sind wir als Diensteanbieter jedoch nicht verpflichtet, ",
+    "übermittelte oder gespeicherte fremde Informationen zu überwachen oder nach Umständen zu forschen, die auf eine ",
+    "rechtswidrige Tätigkeit hinweisen.",
+    "\n\n",
+    "Verpflichtungen zur Entfernung oder Sperrung der Nutzung von Informationen nach den allgemeinen Gesetzen bleiben hiervon unberührt. ",
+    "Eine diesbezügliche Haftung ist jedoch erst ab dem Zeitpunkt der Kenntnis einer konkreten Rechtsverletzung möglich. ",
+    "Bei Bekanntwerden von entsprechenden Rechtsverletzungen werden wir diese Inhalte umgehend entfernen."
   ],
   "text_imprint_accountability-for-links": [
-    "<p>",
-    "  Unser Angebot enthält Links zu externen Websites Dritter, auf deren Inhalte wir keinen Einfluss haben. Deshalb ",
-    "  können wir für diese fremden Inhalte auch keine Gewähr übernehmen. Für die Inhalte der verlinkten Seiten ist ",
-    "  stets der jeweilige Anbieter oder Betreiber der Seiten verantwortlich. Die verlinkten Seiten wurden zum Zeitpunkt ",
-    "  der Verlinkung auf mögliche Rechtsverstöße überprüft. Rechtswidrige Inhalte waren zum Zeitpunkt der Verlinkung ",
-    "  nicht erkennbar.",
-    "</p> ",
-    "<p>",
-    "  Eine permanente inhaltliche Kontrolle der verlinkten Seiten ist jedoch ohne konkrete Anhaltspunkte einer Rechtsverletzung nicht zumutbar. ",
-    "  Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Links umgehend entfernen. ",
-    "</p> "
+    "Unser Angebot enthält Links zu externen Websites Dritter, auf deren Inhalte wir keinen Einfluss haben. Deshalb ",
+    "können wir für diese fremden Inhalte auch keine Gewähr übernehmen. Für die Inhalte der verlinkten Seiten ist ",
+    "stets der jeweilige Anbieter oder Betreiber der Seiten verantwortlich. Die verlinkten Seiten wurden zum Zeitpunkt ",
+    "der Verlinkung auf mögliche Rechtsverstöße überprüft. Rechtswidrige Inhalte waren zum Zeitpunkt der Verlinkung ",
+    "nicht erkennbar.",
+    "\n\n",
+    "Eine permanente inhaltliche Kontrolle der verlinkten Seiten ist jedoch ohne konkrete Anhaltspunkte einer Rechtsverletzung nicht zumutbar. ",
+    "Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Links umgehend entfernen. "
   ],
   "text_imprint_address": [
-    "<p>",
-    "  Lukas Semmler<br>",
-    "  Kevenhüll H 4<br>",
-    "  92339 Beilngries",
-    "</p> "
+    "Lukas Semmler\n",
+    "Kevenhüll H 4\n",
+    "92339 Beilngries"
   ],
   "text_imprint_contact": [
-    "<p>",
-    "  Telefon: <a href=\"tel:+4917639203916\">+49 176 39203916</a><br> ",
-    "  E-Mail: <a href=\"mailto:kontakt@lukassemmler.de\">kontakt@lukassemmler.de</a> ",
-    "</p> "
+    "Telefon: [+49 176 39203916](tel:+4917639203916)\n",
+    "E-Mail: [kontakt@lukassemmler.de](mailto:kontakt@lukassemmler.de)"
   ],
   "text_imprint_copyright": [
-    "<p>",
-    "  Die durch die Seitenbetreiber erstellten Inhalte und Werke auf diesen Seiten unterliegen dem deutschen ",
-    "  Urheberrecht. Die Vervielfältigung, Bearbeitung, Verbreitung und jede Art der Verwertung außerhalb der Grenzen ",
-    "  des Urheberrechtes bedürfen der schriftlichen Zustimmung des jeweiligen Autors bzw. Erstellers. Downloads und ",
-    "  Kopien dieser Seite sind nur für den privaten, nicht kommerziellen Gebrauch gestattet.",
-    "</p> ",
-    "<p>",
-    "  Soweit die Inhalte auf dieser Seite nicht vom Betreiber erstellt wurden, werden die Urheberrechte Dritter ",
-    "  beachtet. Insbesondere werden Inhalte Dritter als solche gekennzeichnet. Sollten Sie trotzdem auf eine ",
-    "  Urheberrechtsverletzung aufmerksam werden, bitten wir um einen entsprechenden Hinweis. Bei Bekanntwerden von ",
-    "  Rechtsverletzungen werden wir derartige Inhalte umgehend entfernen.",
-    "</p> "
+    "Die durch die Seitenbetreiber erstellten Inhalte und Werke auf diesen Seiten unterliegen dem deutschen ",
+    "Urheberrecht. Die Vervielfältigung, Bearbeitung, Verbreitung und jede Art der Verwertung außerhalb der Grenzen ",
+    "des Urheberrechtes bedürfen der schriftlichen Zustimmung des jeweiligen Autors bzw. Erstellers. Downloads und ",
+    "Kopien dieser Seite sind nur für den privaten, nicht kommerziellen Gebrauch gestattet.",
+    "\n\n",
+    "Soweit die Inhalte auf dieser Seite nicht vom Betreiber erstellt wurden, werden die Urheberrechte Dritter ",
+    "beachtet. Insbesondere werden Inhalte Dritter als solche gekennzeichnet. Sollten Sie trotzdem auf eine ",
+    "Urheberrechtsverletzung aufmerksam werden, bitten wir um einen entsprechenden Hinweis. Bei Bekanntwerden von ",
+    "Rechtsverletzungen werden wir derartige Inhalte umgehend entfernen."
   ],
-  "text_imprint_source": [
-    "Quelle: <a href=\"https://www.e-recht24.de\">eRecht24</a> "
-  ],
+  "text_imprint_source": "Quelle: [eRecht24](https://www.e-recht24.de)",
   "text_index_hello": [
     "Mein Name ist Lukas und <br>ich bin ein UX-Designer. "
   ],
