--- a/locales/en.json
+++ b/locales/en.json
@@ -697,61 +697,46 @@
     "It addresses topics like composition, gestalt laws and typography. "
   ],
   "text_imprint_accountability-for-content": [
-    "<p>",
-    "  As a service provider we are responsible according to section 7 paragraph 1 Telemedia Act (TMG) for own contents ",
-    "  on these sides according to the general laws.",
-    "  According to sections 8 to 10 TMG, however, we as a service provider are not obliged to monitor transmitted or ",
-    "  stored external information or to investigate circumstances that indicate illegal activity.",
-    "</p>",
-    "<p>",
-    "  Obligations to remove or block the use of information under general law remain unaffected. ",
-    "  A liability in this regard, however, is only possible from the date of knowledge of a specific infringement. ",
-    "  Upon notification of those violations, we will remove these contents immediately.",
-    "</p>"
+    "As a service provider we are responsible according to section 7 paragraph 1 Telemedia Act (TMG) for own contents ",
+    "on these sides according to the general laws.",
+    "According to sections 8 to 10 TMG, however, we as a service provider are not obliged to monitor transmitted or ",
+    "stored external information or to investigate circumstances that indicate illegal activity.",
+    "\n\n",
+    "Obligations to remove or block the use of information under general law remain unaffected. ",
+    "A liability in this regard, however, is only possible from the date of knowledge of a specific infringement. ",
+    "Upon notification of those violations, we will remove these contents immediately."
   ],
   "text_imprint_accountability-for-links": [
-    "<p>",
-    "  Our offer contains links to external websites of third parties on whose contents we do not have any influence. ",
-    "  Therefore, we cannot assume any liability for these external contents. ",
-    "  The respective provider or operator of the pages is always responsible for the contents of the linked pages. ",
-    "  The linked pages were checked for possible legal violations at the time of linking. ",
-    "  Illegal content was not recognizable at the time of linking.",
-    "</p> ",
-    "<p>",
-    "  However, a permanent content control of the linked pages is not reasonable without concrete evidence of an infringement. ",
-    "  Upon notification of violations, we will remove such links immediately.",
-    "</p> "
+    "Our offer contains links to external websites of third parties on whose contents we do not have any influence. ",
+    "Therefore, we cannot assume any liability for these external contents. ",
+    "The respective provider or operator of the pages is always responsible for the contents of the linked pages. ",
+    "The linked pages were checked for possible legal violations at the time of linking. ",
+    "Illegal content was not recognizable at the time of linking.",
+    "\n\n",
+    "However, a permanent content control of the linked pages is not reasonable without concrete evidence of an infringement. ",
+    "Upon notification of violations, we will remove such links immediately."
   ],
   "text_imprint_address": [
-    "<p>",
-    "  Lukas Semmler<br>",
-    "  Kevenhüll H 4<br>",
-    "  92339 Beilngries",
-    "</p> "
+    "Lukas Semmler\n",
+    "Kevenhüll H 4\n",
+    "92339 Beilngries"
   ],
   "text_imprint_contact": [
-    "<p>",
-    "  Phone: <a href=\"tel:+4917639203916\">+49 176 39203916</a><br> ",
-    "  E-Mail: <a href=\"mailto:kontakt@lukassemmler.de\">kontakt@lukassemmler.de</a> ",
-    "</p> "
+    "Phone: [+49 176 39203916](tel:+4917639203916)\n",
+    "Email: [kontakt@lukassemmler.de](mailto:kontakt@lukassemmler.de)"
   ],
   "text_imprint_copyright": [
-    "<p>",
-    "  Our web pages and their contents are subject to the German copyright. ",
-    "  The reproduction, processing, distribution and any kind of exploitation outside the limits of copyright ",
-    "  require the written consent of the respective author respectively creator. ",
-    "  Downloads and copies of  these pages are for private, non-commercial use only.",
-    "</p>",
-    "<p>",
-    "  As far as the contents of this website were not created by the operator, the copyrights of third parties are considered. ",
-    "  In particular contents of third parties are marked as such. ",
-    "  If you should still be aware of a copyright infringement, we ask for a note. ",
-    "  Upon notification of violations, we will remove such contents immediately.",
-    "</p>"
+    "Our web pages and their contents are subject to the German copyright. ",
+    "The reproduction, processing, distribution and any kind of exploitation outside the limits of copyright ",
+    "require the written consent of the respective author respectively creator. ",
+    "Downloads and copies of  these pages are for private, non-commercial use only.",
+    "\n\n",
+    "As far as the contents of this website were not created by the operator, the copyrights of third parties are considered. ",
+    "In particular contents of third parties are marked as such. ",
+    "If you should still be aware of a copyright infringement, we ask for a note. ",
+    "Upon notification of violations, we will remove such contents immediately."
   ],
-  "text_imprint_source": [
-    "Source: <a href=\"https://www.e-recht24.de\">eRecht24</a> "
-  ],
+  "text_imprint_source": "Source: [eRecht24](https://www.e-recht24.de)",
   "text_index_hello": [
     "My Name is Lukas and <br>I'm a UX designer. "
   ],
