Add content to page '404'

--- a/locales/de.json
+++ b/locales/de.json
@@ -169,9 +169,9 @@
   "caption_thi-move_paper-prototypes": "Paperprototypes. ",
   "caption_thi-move_prototype": "Vom Prototypen zum fertigen Screendesign. ",
   "debug_any-link": "Ein Link",
-  "error_go-back-to-start-page": "Bene das Alpaca hat jetzt Angst. <br>Geh lieber <a href=\"%s\">zurück zur Startseite...</a> ",
-  "error_oopsie": "Hoppla! :(",
-  "error_page-not-found": "Die gewünschte Seite konnte nicht gefunden werden",
+  "error_go-back-to-start-page": "Bene das Alpaca hat jetzt Angst. \nGeh lieber zurück zur [Startseite](~/)... ",
+  "error_oopsie": "Hoppla :(",
+  "error_page-not-found": "Die gewünschte Seite konnte nicht gefunden werden.",
   "error_something-went-wrong": "Oh nein! Es ist was schiefgelaufen!",
   "heading_about_drawing": "Zeichnen",
   "heading_about_education": "Ausbildung",
