--- a/locales/en.json
+++ b/locales/en.json
@@ -169,9 +169,9 @@
   "caption_thi-move_paper-prototypes": "Paper prototypes. ",
   "caption_thi-move_prototype": "From prototype to finished design. ",
   "debug_any-link": "Any link",
-  "error_go-back-to-start-page": "Bene, the alpaca, is scared now. <br>Please <a href=\"%s\">go back to the home page ...</a>",
-  "error_oopsie": "Oopsie! :(",
-  "error_page-not-found": "The requested page could not be found",
+  "error_go-back-to-start-page": "Bene, the alpaca, is scared now. \nPlease go back to the [home page](~/) ...",
+  "error_oopsie": "Oopsie :(",
+  "error_page-not-found": "The requested page could not be found.",
   "error_something-went-wrong": "Oh no! Something went wrong!",
   "heading_about_drawing": "Drawing",
   "heading_about_education": "Education",
