Update locale keys for ProjectMeta

--- a/locales/de.json
+++ b/locales/de.json
@@ -400,11 +400,14 @@
   "label_project-pagination_current": "Aktuelles Projekt",
   "label_project-pagination_next": "Nächstes Projekt",
   "label_project-pagination_previous": "Vorheriges Projekt",
+  "label_project-summary_headline": "Projekt-Zusammenfassung",
   "label_project-summary_date": "Datum",
   "label_project-summary_format": "Format",
-  "label_project-summary_lecture": "Vorlesung",
+  "label_project-summary_client": "Auftraggeber",
   "label_project-summary_name": "Name",
   "label_project-summary_tasks": "Aufgaben",
+  "label_project-summary_tools": "Werkzeuge",
+  "label_project-summary_colleagues": "Kollegen",
   "label_select-language": "Sprache auswählen",
   "label_site-name": "Lukas Semmler Portfolio",
   "label_step": "Schritt",
@@ -540,13 +543,13 @@
   "project-summary-format_power-ui": "Spiele-Prototypen",
   "project-summary-format_steering-wheel": "Bildschirm, Full HD",
   "project-summary-format_thi-move": "Bildschirm, Full&nbsp;HD",
-  "project-summary-lecture_3d-modelling": "Freie Arbeit",
-  "project-summary-lecture_data-visualization": "Grundlagen der Gestaltung 2 (2. Semester)",
-  "project-summary-lecture_design-booklet": "Grundlagen der Gestaltung 1 (1. Semester)",
-  "project-summary-lecture_infotainment-system": "Grundlagen der Gestaltung 2 (2. Semester)",
-  "project-summary-lecture_power-ui": "Bachelorarbeit",
-  "project-summary-lecture_steering-wheel": "Software Prototyping und Usability Testing",
-  "project-summary-lecture_thi-move": "Design der Mensch-Maschine-Schnittstellen (3.&nbsp;Semester)",
+  "project-summary-client_3d-modelling": "Freie Arbeit",
+  "project-summary-client_data-visualization": "Grundlagen der Gestaltung 2 (2. Semester)",
+  "project-summary-client_design-booklet": "Grundlagen der Gestaltung 1 (1. Semester)",
+  "project-summary-client_infotainment-system": "Grundlagen der Gestaltung 2 (2. Semester)",
+  "project-summary-client_power-ui": "Bachelorarbeit",
+  "project-summary-client_steering-wheel": "Software Prototyping und Usability Testing",
+  "project-summary-client_thi-move": "Design der Mensch-Maschine-Schnittstellen (3.&nbsp;Semester)",
   "project-summary-name_3d-modelling": "Donuts, Kopf, Glühbirne",
   "project-summary-name_data-visualization": "Der Weg zur THI",
   "project-summary-name_design-booklet": "Übungen des 1. Semesters – Grundlagen der Gestaltung",
