--- a/locales/en.json
+++ b/locales/en.json
@@ -400,11 +400,14 @@
   "label_project-pagination_current": "Current project",
   "label_project-pagination_next": "Next project",
   "label_project-pagination_previous": "Previous project",
+  "label_project-summary_headline": "Project Summary",
   "label_project-summary_date": "Date",
   "label_project-summary_format": "Format",
-  "label_project-summary_lecture": "Lecture",
+  "label_project-summary_client": "Client",
   "label_project-summary_name": "Name",
   "label_project-summary_tasks": "Tasks",
+  "label_project-summary_tools": "Tools",
+  "label_project-summary_colleagues": "Colleagues",
   "label_select-language": "Select language",
   "label_site-name": "Lukas Semmler Portfolio",
   "label_step": "step",
@@ -540,13 +543,13 @@
   "project-summary-format_power-ui": "Game Prototypes",
   "project-summary-format_steering-wheel": "Screen, Full HD",
   "project-summary-format_thi-move": "Screen, Full&nbsp;HD",
-  "project-summary-lecture_3d-modelling": "Leisure work",
-  "project-summary-lecture_data-visualization": "Grundlagen der Gestaltung 2 (2. Semester)",
-  "project-summary-lecture_design-booklet": "Grundlagen der Gestaltung 1 (1. Semester)",
-  "project-summary-lecture_infotainment-system": "Grundlagen der Gestaltung 2 (2. Semester)",
-  "project-summary-lecture_power-ui": "Bachelor Thesis",
-  "project-summary-lecture_steering-wheel": "Software Prototyping und Usability Testing",
-  "project-summary-lecture_thi-move": "Design der Mensch-Maschine-Schnittstellen (3.&nbsp;Semester)",
+  "project-summary-client_3d-modelling": "Leisure work",
+  "project-summary-client_data-visualization": "Grundlagen der Gestaltung 2 (2. Semester)",
+  "project-summary-client_design-booklet": "Grundlagen der Gestaltung 1 (1. Semester)",
+  "project-summary-client_infotainment-system": "Grundlagen der Gestaltung 2 (2. Semester)",
+  "project-summary-client_power-ui": "Bachelor Thesis",
+  "project-summary-client_steering-wheel": "Software Prototyping und Usability Testing",
+  "project-summary-client_thi-move": "Design der Mensch-Maschine-Schnittstellen (3.&nbsp;Semester)",
   "project-summary-name_3d-modelling": "Donuts, Bust, Light Bulb",
   "project-summary-name_data-visualization": "The road to THI",
   "project-summary-name_design-booklet": "Exercises of the 1.&nbsp;Semester – Fundamentals of design",
