Fix typo in German locale

--- a/locales/de.json
+++ b/locales/de.json
@@ -616,7 +616,7 @@
   "text_about_education-3_location": "München",
   "text_about_education-3_organization": "Hanns-Seidel-Stiftung",
   "text_about_education-3_time-span": "Apr 2018 &ndash; Mrz 2020",
-  "text_about_education-3_title": "Altstpidendiat",
+  "text_about_education-3_title": "Altstipendiat",
   "text_about_education-4_description": [],
   "text_about_education-4_location": "Ingolstadt",
   "text_about_education-4_organization": "DesignNow Autodesk Fusion 360",
