Change lang menu option labels to be annotated with lang

--- a/locales/en.json
+++ b/locales/en.json
@@ -242,8 +242,8 @@
   "label_data_visualization_icon_living-single": "living-single",
   "label_data_visualization_icon_living-with-parents": "living-with-parents",
   "label_data_visualization_icon_living-with-partner": "living-with-partner",
-  "label_lang_const_english": "En<span class=\"full-name\">glish</span>",
-  "label_lang_const_german": "De<span class=\"full-name\">utsch</span>",
+  "label_lang_const_english": "<span lang=\"en-US\">English</span>",
+  "label_lang_const_german": "<span lang=\"de-DE\">Deutsch</span>",
   "label_lang_default": "Lang",
   "label_lang_english": "English",
   "label_lang_german": "German",
