--- a/locales/de.json
+++ b/locales/de.json
@@ -242,8 +242,8 @@
   "label_data_visualization_icon_living-single": "Wohnen Solo",
   "label_data_visualization_icon_living-with-parents": "Wohnen bei Eltern",
   "label_data_visualization_icon_living-with-partner": "Wohnen mit Partner",
-  "label_lang_const_english": "En<span class=\"full-name\">glish</span>",
-  "label_lang_const_german": "De<span class=\"full-name\">utsch</span>",
+  "label_lang_const_english": "<span lang=\"en-US\">English</span>",
+  "label_lang_const_german": "<span lang=\"de-DE\">Deutsch</span>",
   "label_lang_default": "Sprache",
   "label_lang_english": "Englisch",
   "label_lang_german": "Deutsch",
