Add component 'AlertBanner'

--- a/locales/de.json
+++ b/locales/de.json
@@ -168,6 +168,7 @@
   "caption_thi-move_movie-wip-4": "4.&nbsp;Schritt: <br>Mithilfe eines Greenscreens wurden die Animationen dann in das Video übertragen. Beim Schneiden war es vor allem wichtig, das Timing abzustimmen und die Szenen passend aneinander zu schneiden. ",
   "caption_thi-move_paper-prototypes": "Paperprototypes. ",
   "caption_thi-move_prototype": "Vom Prototypen zum fertigen Screendesign. ",
+  "component_banner_close": "Diesen Banner schließen. ",
   "debug_any-link": "Ein Link",
   "error_go-back-to-start-page": "Bene das Alpaca hat jetzt Angst. \nGeh lieber zurück zur [Startseite](~/)... ",
   "error_oopsie": "Hoppla :(",
