--- a/locales/en.json
+++ b/locales/en.json
@@ -168,6 +168,7 @@
   "caption_thi-move_movie-wip-4": "Last step: <br>Later, the animation was superimposed onto a green screen in the footage. When cutting, it was most important to get down the right pacing with the scenes. ",
   "caption_thi-move_paper-prototypes": "Paper prototypes. ",
   "caption_thi-move_prototype": "From prototype to finished design. ",
+  "component_banner_close": "Close this banner. ",
   "debug_any-link": "Any link",
   "error_go-back-to-start-page": "Bene, the alpaca, is scared now. \nPlease go back to the [home page](~/) ...",
   "error_oopsie": "Oopsie :(",
