Fix a long German word not having a soft hyphen

--- a/locales/de.json
+++ b/locales/de.json
@@ -232,7 +232,7 @@
   "label_data_visualization_icon_commute": "Fahrtweg",
   "label_data_visualization_icon_cost": "Kosten",
   "label_data_visualization_icon_driving-alone": "Fahren Solo",
-  "label_data_visualization_icon_driving-car-pool": "Fahrgemeinschaft",
+  "label_data_visualization_icon_driving-car-pool": "Fahr&shy;gemeinschaft",
   "label_data_visualization_icon_going-by-bike": "Fahrrad",
   "label_data_visualization_icon_going-by-bus": "Bus",
   "label_data_visualization_icon_going-by-car": "Auto",
