Fix some strings not using markdown for italic

--- a/locales/de.json
+++ b/locales/de.json
@@ -974,7 +974,7 @@
     "Da die Benutzeroberfläche eines Videospiels stark mit dem Gameplay verknüpft ist, habe ich auch versucht, eine einfache Gameplay-Schleife zu entwickeln. "
   ],
   "text_power-ui_intro-2": [
-    "Im Folgenden wurde der <i>User-Centered Design Process</i> zum Erstellen des Produkts angewandt. ",
+    "Im Folgenden wurde der *User-Centered Design Process* zum Erstellen des Produkts angewandt. ",
     "Die Schritte waren wie folgt: ",
     "Analyse, Konzept, Design, Implementierung, Evaluation. "
   ],
