--- a/locales/en.json
+++ b/locales/en.json
@@ -974,7 +974,7 @@
     "Because a video game UI is highly interlocked with the gameplay, I also tried coming up with a simple gameplay loop. "
   ],
   "text_power-ui_intro-2": [
-    "In the following, the <i>User-Centered Design Process</i> was used to create the product. ",
+    "In the following, the *User-Centered Design Process* was used to create the product. ",
     "The steps were as follows: ",
     "Analysis, Concept, Design, Implementation, Evaluation. "
   ],
