Add TOC headline to locales

--- a/locales/de.json
+++ b/locales/de.json
@@ -412,6 +412,7 @@
   "label_select-language": "Sprache auswählen",
   "label_site-name": "Lukas Semmler Portfolio",
   "label_step": "Schritt",
+  "label_table-of-contents": "Inhaltsverzeichnis",
   "label_tag_3d-modelling": "3D-Modellierung",
   "label_tag_asset-creation": "Asset-Erstellung",
   "label_tag_coding-games": "Game-Coding",
