--- a/locales/en.json
+++ b/locales/en.json
@@ -412,6 +412,7 @@
   "label_select-language": "Select language",
   "label_site-name": "Lukas Semmler Portfolio",
   "label_step": "step",
+  "label_table-of-contents": "Table of Contents",
   "label_tag_3d-modelling": "3d modelling",
   "label_tag_asset-creation": "asset creation",
   "label_tag_coding-games": "game coding",
