--- a/locales/de.json
+++ b/locales/de.json
@@ -205,6 +205,7 @@
   "heading_infotainment-system_screen-design_final": "Final",
   "heading_infotainment-system_screen-design_wip": "Zwischenstand",
   "heading_overview": "Übersicht",
+  "heading_power-ui_3d-models": "3D-Modelle",
   "heading_power-ui_assets": "Assets",
   "heading_power-ui_axure": "Axure",
   "heading_power-ui_concept": "Konzept",
