--- a/locales/en.json
+++ b/locales/en.json
@@ -205,6 +205,7 @@
   "heading_infotainment-system_screen-design_final": "Final",
   "heading_infotainment-system_screen-design_wip": "WIP",
   "heading_overview": "Overview",
+  "heading_power-ui_3d-models": "3D Models",
   "heading_power-ui_assets": "Assets",
   "heading_power-ui_axure": "Axure",
   "heading_power-ui_concept": "Concept",
