Add i18n for 'about' intro

--- a/locales/de.json
+++ b/locales/de.json
@@ -181,6 +181,11 @@
   "heading_about_knowledge-language": "Sprachkenntnisse",
   "heading_about_knowledge-software": "Software",
   "heading_about_work-experience": "Berufserfahrung",
+  "heading_about_presentation": "Präsentation",
+  "heading_about_liking": "Was ich mag",
+  "heading_about_offering": "Was ich biete",
+  "heading_about_good-at": "Kann ich gut",
+  "heading_about_bad-at": "Kann ich schlecht",
   "heading_contact": "Kontakt",
   "heading_data-visualization_concept": "Konzeption",
   "heading_data-visualization_data-collection-and-evaluation": "Datenerhebung und -auswertung",
@@ -594,6 +599,21 @@
     "Hauptsächlich anthropomorphe Charakter oder Porträt-Studien. ",
     "Es ist etwas, das mich wirklich glücklich macht und ich hoffe, es bringt auch anderen Freude. "
   ],
+  "text_about_liking_1": "UX-Design",
+  "text_about_liking_2": "Illustration",
+  "text_about_liking_3": "Frontend-Coding",
+  "text_about_liking_4": "Spiel-Entwicklung",
+  "text_about_offering_1": "freundlich und zuverlässig",
+  "text_about_offering_2": "kleine Ideen und Fragen",
+  "text_about_offering_3": "gut strukturiertes UI-Design",
+  "text_about_offering_4": "robuste Konzepte und Design",
+  "text_about_good-at_1": "Lange Projekte mit großer Tiefe",
+  "text_about_good-at_2": "Organisieren von Infos (Wikis und Dokumentation)",
+  "text_about_good-at_3": "Design nach Barrierefreiheits-Regeln",
+  "text_about_good-at_4": "Automatisierung von aufwendigen Arbeitsschritten",
+  "text_about_bad-at_1": "Schnellfeuer-Projekte",
+  "text_about_bad-at_2": "Ungenaue Projekt-Anforderungen",
+  "text_about_bad-at_3": "Geradlinige, wiederholende Aufgaben",
   "text_about_drawing_checkout-instagram": [
     "Mehr Zeichnungen kann man unter meinem Instagram-Account finden: "
   ],
