--- a/locales/en.json
+++ b/locales/en.json
@@ -181,6 +181,11 @@
   "heading_about_knowledge-language": "Language",
   "heading_about_knowledge-software": "Software",
   "heading_about_work-experience": "Work experience",
+  "heading_about_presentation": "Presentation",
+  "heading_about_liking": "Things I like",
+  "heading_about_offering": "What I can offer",
+  "heading_about_good-at": "Things I'm good at",
+  "heading_about_bad-at": "Things I'm bad at",
   "heading_contact": "Contact",
   "heading_data-visualization_concept": "Concept",
   "heading_data-visualization_data-collection-and-evaluation": "Data collection and evaluation",
@@ -594,6 +599,21 @@
     "Mostly anthropomorphic characters or portrait studies. ",
     "It's something I really enjoy and I hope people like my drawings too. "
   ],
+  "text_about_liking_1": "UX design",
+  "text_about_liking_2": "illustration",
+  "text_about_liking_3": "frontend coding",
+  "text_about_liking_4": "game development",
+  "text_about_offering_1": "friendly and reliable",
+  "text_about_offering_2": "small ideas and questions",
+  "text_about_offering_3": "well-structured UI design",
+  "text_about_offering_4": "robust concepts and design",
+  "text_about_good-at_1": "big projects with high complexity",
+  "text_about_good-at_2": "organizing information (wikis and documentation)",
+  "text_about_good-at_3": "design following accessability guidelines",
+  "text_about_good-at_4": "automation of unefficient work steps",
+  "text_about_bad-at_1": "quick-fire projects",
+  "text_about_bad-at_2": "dealing with uncertainty",
+  "text_about_bad-at_3": "straight-forward, repetitive tasks",
   "text_about_drawing_checkout-instagram": [
     "If you want to see more drawings, please check out my instagram: "
   ],
