Add project list info when 0 results

--- a/locales/de.json
+++ b/locales/de.json
@@ -249,6 +249,7 @@
   "label_data_visualization_icon_living-single": "Wohnen Solo",
   "label_data_visualization_icon_living-with-parents": "Wohnen bei Eltern",
   "label_data_visualization_icon_living-with-partner": "Wohnen mit Partner",
+  "label_info_tag-list_no-results": "Es gibt keine Einträge, die alle angegeben Tags erfüllen.",
   "label_lang-level_advanced": "Fortgeschritten",
   "label_lang-level_beginner": "Anfänger",
   "label_lang-level_first-language": "Muttersprache",
