--- a/locales/en.json
+++ b/locales/en.json
@@ -249,6 +249,7 @@
   "label_data_visualization_icon_living-single": "living-single",
   "label_data_visualization_icon_living-with-parents": "living-with-parents",
   "label_data_visualization_icon_living-with-partner": "living-with-partner",
+  "label_info_tag-list_no-results": "There are no entries that fit all specified tags.",
   "label_lang-level_advanced": "Advanced",
   "label_lang-level_beginner": "Beginner",
   "label_lang-level_first-language": "First Language",
